# Rascunhos

./: Conversor_Segundos_Minutos_Horas_Dias.py  Gerador_JSONS.py  Gerador_JSONS_v2.py  README.md  arquivoTeste.json  pyproject.toml
